--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </p>
 
     <div class="route" title="Save your route image as route-map.png next to this HTML file.">
-      <img src="route-map.png" alt="Route map (Antrim Coast to Waterford via Dublin, Kilkenny etc.)">
+      <img src="route-map.jpg" alt="Route map (Antrim Coast to Waterford via Dublin, Kilkenny etc.)">
     </div>
 
     <p class="note">
@@ -809,3 +809,4 @@
   </main>
 </body>
 </html>
+
